re-sizing figures in 07__cis_effects

--- a/analysis/02__mpra/06__native_effects/06__native_effects.ipynb
+++ b/analysis/02__mpra/06__native_effects/06__native_effects.ipynb
@@ -28315,6 +28315,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CAGE turnover     851\n",
+       "mRNA              463\n",
+       "biotype switch    234\n",
+       "eRNA              159\n",
+       "lncRNA             72\n",
+       "other              32\n",
+       "lincRNA            21\n",
+       "Name: biotype_switch_clean, dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_filt.biotype_switch_clean.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
