figure re-sizing

--- a/analysis/04__features/01__motifs_cis/01__motifs_cis.ipynb
+++ b/analysis/04__features/01__motifs_cis/01__motifs_cis.ipynb
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1808,33 +1808,7 @@
       "1750\n",
       "1800\n",
       "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n"
+      "1900\n"
      ]
     }
    ],
@@ -1929,7 +1903,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(motif_align_res)"
@@ -1938,7 +1914,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "motif_align_res = pd.DataFrame.from_dict(motif_align_res, orient=\"index\").reset_index()\n",
@@ -1948,7 +1926,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "motif_align_res[\"perc_motif_regions_aligned\"] = (motif_align_res[\"n_align_w_motif\"]/(motif_align_res[\"n_align_w_motif\"]+motif_align_res[\"n_unalign_w_motif\"])) * 100\n",
@@ -1959,7 +1939,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "motif_align_res[\"hg19_id\"] = motif_align_res[\"index\"].str.split(\"__\", expand=True)[0]\n",
@@ -1970,7 +1952,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(results))\n",
@@ -1982,7 +1966,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_filt = motif_results[(motif_results[\"HUES64_padj_hg19\"] < 0.05) | (motif_results[\"mESC_padj_mm9\"] < 0.05)]\n",
@@ -1994,7 +1980,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_filt.columns"
@@ -2003,10 +1991,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(2, 2))\n",
+    "fig = plt.figure(figsize=(1.75, 1.75))\n",
     "ax = sns.regplot(data=data_filt, x=\"perc_motif_regions_aligned\", y=\"abs_logFC_cis_max\", color=\"slategray\", fit_reg=True,\n",
     "                 scatter_kws={\"s\": 15, \"alpha\": 0.75, \"linewidth\": 0.5, \"edgecolor\": \"white\"}, \n",
     "                 line_kws={\"color\": \"black\"})\n",
@@ -2021,17 +2011,19 @@
     "        transform=ax.transAxes)\n",
     "        \n",
     "plt.xlabel(\"% motif regions aligned\")\n",
-    "plt.ylabel(\"maximum cis effect size\")\n",
+    "plt.ylabel(\"assigned cis effect size\")\n",
     "fig.savefig(\"cis_effect_v_motif_align.pdf\", dpi=\"figure\", bbox_inches=\"tight\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(2, 2))\n",
+    "fig = plt.figure(figsize=(1.75, 1.75))\n",
     "ax = sns.regplot(data=data_filt, x=\"perc_no_motif_regions_aligned\", y=\"abs_logFC_cis_max\", color=\"slategray\", fit_reg=True,\n",
     "                 scatter_kws={\"s\": 15, \"alpha\": 0.75, \"linewidth\": 0.5, \"edgecolor\": \"white\"}, \n",
     "                 line_kws={\"color\": \"black\"})\n",
@@ -2046,7 +2038,7 @@
     "        transform=ax.transAxes)\n",
     "        \n",
     "plt.xlabel(\"% no motif regions aligned\")\n",
-    "plt.ylabel(\"maximum cis effect size\")\n",
+    "plt.ylabel(\"assigned cis effect size\")\n",
     "fig.savefig(\"cis_effect_v_no_motif_align.pdf\", dpi=\"figure\", bbox_inches=\"tight\")"
    ]
   },
